# pet_project_django

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: django.yml  django_tests.yml  flake8.yml  linter.yml  pylint.yml  tests.yml
account/: forms.py  models.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_account_name.py
assets/: login.css
bills/: forms.py  models.py  tests.py  urls.py  views.py
bills/migrations/: 0001_initial.py  0002_auto_20211023_1941.py
pet_project_django/: asgi.py  settings.py  urls.py  wsgi.py
static/: login.css
templates/: base.html
templates/account/: list.html  user_list.html
templates/bills/: list.html
templates/registration/: login.html  logout.html  register.html
templates/user_profile/: profile.html  profile_edit.html
user_profile/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  0002_user_account.py
