[tool.poetry]
name = "repo_template"
version = "0.1.0"
description = "Template description"
authors = ["Ross <rostikvunarchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.7"
djangorestframework = "3.12.4"
django-filter = "21.1"
psycopg2-binary = "2.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | venv/
  | .idea/
)/'''


[tool.isort]
profile = "hug"
src_paths = ["account", "bills", "pet_project_django", "user_profile"]
